syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

enum FriendOnlineState {
    FREIEND_DISCONNECT = 0;
    FRIEND_ONLINE = 1;
}

enum DealAddFriendResultType {
    DEAL_ADD_FRIEND_REJECT = 0;
    DEAL_ADD_FRIEND_ACCEPT = 1;
}

message SocialShowAvatarInfo {
    uint32 avatar_id = 1;
    uint32 level = 2;
    uint32 costume_id = 3;
}

message SocialDetail {
    uint32 uid = 1;
    string nickname = 2;
    uint32 level = 3;
    uint32 avatar_id = 4;
    string signature = 5;
    Birthday birthday = 6;
    uint32 world_level = 7;
    repeated uint32 reserved_list = 8;
    FriendOnlineState online_state = 9;
    uint32 param = 10;
    bool is_friend = 11;
    bool is_mp_mode_available = 12;
    string online_id = 13;
    uint32 name_card_id = 14;
    bool is_in_blacklist = 15;
    bool is_chat_no_disturb = 16;
    string remark_name = 17;
    uint32 finish_achievement_num = 18;
    uint32 tower_floor_index = 19;
    uint32 tower_level_index = 20;
    bool is_show_avatar = 21;
    repeated SocialShowAvatarInfo show_avatar_info_list = 22;
    repeated uint32 show_name_card_id_list = 23;
    FriendEnterHomeOption friend_enter_home_option = 24;
    ProfilePicture profile_picture = 25;
    string ip_code = 26;
}

message FriendBrief {
    uint32 uid = 1;
    string nickname = 2;
    uint32 level = 3;
    uint32 avatar_id = 4;
    uint32 world_level = 5;
    string signature = 6;
    FriendOnlineState online_state = 7;
    uint32 param = 8;
    bool is_mp_mode_available = 10;
    string online_id = 11;
    uint32 last_active_time = 12;
    uint32 name_card_id = 13;
    uint32 mp_player_num = 14;
    bool is_chat_no_disturb = 15;
    uint32 chat_sequence = 16;
    string remark_name = 17;
    repeated SocialShowAvatarInfo show_avatar_info_list = 22;
    FriendEnterHomeOption friend_enter_home_option = 23;
    ProfilePicture profile_picture = 24;
    bool is_game_source = 25;
    bool is_psn_source = 26;
    PlatformType platform_type = 27;
}

message ChatEmojiCollectionData {
    repeated uint32 emoji_id_list = 1;
}

message GetPlayerFriendListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4072;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetPlayerFriendListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4098;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 9;
    repeated FriendBrief ask_friend_list = 8;
    repeated FriendBrief friend_list = 14;
}

message AskAddFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4007;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 7;
}

message AskAddFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4021;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 param = 8;
    int32 retcode = 7;
    uint32 target_uid = 4;
}

message DealAddFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4003;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    DealAddFriendResultType deal_add_friend_result = 12;
    uint32 target_uid = 10;
}

message DealAddFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4090;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 1;
    uint32 target_uid = 5;
    DealAddFriendResultType deal_add_friend_result = 6;
}

message GetPlayerSocialDetailReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4073;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 uid = 9;
}

message GetPlayerSocialDetailRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4099;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    SocialDetail detail_data = 12;
    int32 retcode = 1;
}

message DeleteFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4031;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 13;
}

message DeleteFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4075;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 14;
    int32 retcode = 5;
}

message SetPlayerBirthdayReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4048;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    Birthday birthday = 9;
}

message SetPlayerBirthdayRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4097;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    Birthday birthday = 2;
    int32 retcode = 5;
}

message SetPlayerSignatureReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4081;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    string signature = 3;
}

message SetPlayerSignatureRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4005;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    string signature = 1;
    int32 retcode = 4;
}

message SetPlayerHeadImageReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4082;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 avatar_id = 7;
}

message SetPlayerHeadImageRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4047;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    ProfilePicture profile_picture = 6;
    uint32 avatar_id = 5;
    int32 retcode = 1;
}

message UpdatePS4FriendListNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4039;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated string psn_id_list = 15;
}

message DeleteFriendNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4053;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 12;
}

message AddFriendNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4022;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 11;
    FriendBrief target_friend_brief = 10;
}

message AskAddFriendNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4065;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    FriendBrief target_friend_brief = 15;
    uint32 target_uid = 9;
}

message SetNameCardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4004;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 name_card_id = 10;
}

message SetNameCardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4093;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 name_card_id = 11;
    int32 retcode = 12;
}

message GetAllUnlockNameCardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4027;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetAllUnlockNameCardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4094;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 4;
    repeated uint32 name_card_list = 14;
}

message AddBlacklistReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4088;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 2;
}

message AddBlacklistRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4026;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    FriendBrief target_friend_brief = 13;
    int32 retcode = 7;
}

message RemoveBlacklistReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4063;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 13;
}

message RemoveBlacklistRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4095;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 12;
    uint32 target_uid = 7;
}

message UnlockNameCardNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4006;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 name_card_id = 8;
}

message GetRecentMpPlayerListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4034;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetRecentMpPlayerListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4050;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 13;
    repeated FriendBrief recent_mp_player_brief_list = 14;
}

message SocialDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4043;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_have_first_share = 11;
}

message TakeFirstShareRewardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4074;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message TakeFirstShareRewardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4076;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 15;
}

message UpdatePS4BlockListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4046;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated string psn_id_list = 10;
}

message UpdatePS4BlockListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4041;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 7;
}

message GetPlayerBlacklistReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4049;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetPlayerBlacklistRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4091;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 2;
    repeated FriendBrief blacklist = 3;
}

message PlayerReportReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4024;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ReportReasonType reason = 12;
    string content = 8;
    uint32 target_home_module_id = 5;
    string target_home_module_name = 6;
    uint32 target_uid = 14;
}

message PlayerReportRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4056;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 cd_time = 11;
    uint32 target_uid = 6;
    int32 retcode = 12;
}

message SetFriendRemarkNameReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4042;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 uid = 10;
    string remark_name = 8;
}

message SetFriendRemarkNameRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4030;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    string remark_name = 13;
    bool is_clear_remark = 3;
    uint32 uid = 10;
    int32 retcode = 1;
}

message UpdatePlayerShowAvatarListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4067;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_show_avatar = 15;
    repeated uint32 show_avatar_id_list = 13;
}

message UpdatePlayerShowAvatarListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4058;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 show_avatar_id_list = 1;
    bool is_show_avatar = 3;
    int32 retcode = 10;
}

message GetFriendShowAvatarInfoReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4070;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 uid = 15;
}

message GetFriendShowAvatarInfoRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4017;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 uid = 6;
    int32 retcode = 3;
    repeated ShowAvatarInfo show_avatar_info_list = 9;
}

message UpdatePlayerShowNameCardListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4002;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint32 show_name_card_id_list = 15;
}

message UpdatePlayerShowNameCardListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4019;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 13;
    repeated uint32 show_name_card_id_list = 12;
}

message GetFriendShowNameCardInfoReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4061;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 uid = 3;
}

message GetFriendShowNameCardInfoRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4029;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 15;
    uint32 uid = 7;
    repeated uint32 show_name_card_id_list = 10;
}

message ForceAddPlayerFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4057;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 15;
}

message ForceAddPlayerFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4100;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 5;
    FriendBrief target_friend_brief = 2;
    uint32 target_uid = 9;
}

message ProfilePictureChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4016;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ProfilePicture profile_picture = 12;
}

message PSNFriendListNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4087;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated FriendBrief psn_friend_list = 8;
}

message PSNBlackListNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4040;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated FriendBrief psn_blacklist = 11;
}

message GetPlayerAskFriendListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4018;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetPlayerAskFriendListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4066;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 13;
    repeated FriendBrief ask_friend_list = 15;
}

message GetChatEmojiCollectionReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4068;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetChatEmojiCollectionRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4033;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 15;
    ChatEmojiCollectionData chat_emoji_collection_data = 8;
}

message SetChatEmojiCollectionReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4084;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ChatEmojiCollectionData chat_emoji_collection_data = 12;
}

message SetChatEmojiCollectionRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4080;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 12;
}

message UpdatePS4FriendListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4089;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated string psn_id_list = 4;
}

message UpdatePS4FriendListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4059;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 5;
    repeated string psn_id_list = 2;
}

message FriendInfoChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4032;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 uid = 1;
    string online_id = 9;
}

message PlayerSignatureAuditDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4060;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    ContentAuditInfo info = 14;
}

message PlayerSignatureNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4014;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    string signature = 12;
}

message SignatureAuditConfigNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4092;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    bool is_open = 9;
    uint32 submit_limit = 10;
}

message ReadSignatureAuditReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4020;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message ReadSignatureAuditRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4064;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 9;
}
